@@ -1,6 +1,7 @@
 1.4.0i4:
     Checks & Agents:
     * 4104 veeam_tapejobs: New check to monitor Veeam tape jobs
+    * 4170 local: local check is now clusteraware. Best or worst state in cluster mode can be configured...
     * 4171 FIX: perle_psmu: fixed value error...
     * 4172 FIX: smart.temp: fixed discovery and check function...
 
@@ -10,6 +11,9 @@
     WATO:
     * 4142 New extended search dialog for rulesets and rules...
     * 4003 FIX: esx_vsphere_objects: fixed check parameters display bug during WATO service discovery
+
+    Notifications:
+    * 4197 FIX: Fix sending notification to global fallback email address
 
     Event Console:
     * 4154 Do not send notifications if host found and currently in downtime...
